# -buddy-agent

./: README.md  app.py  final_test.py  pyproject.toml  real_agent_test.py  real_document_test.py  requirements.txt  simple_app.py  simple_real_test.py
buddy_agent/: __init__.py  agent.py  prompts.py  tools.py
buddy_agent/sub_agents/: __init__.py
buddy_agent/sub_agents/document_processor/: __init__.py  agent.py  prompts.py  tools.py
buddy_agent/sub_agents/qa_responder/: __init__.py  agent.py  prompts.py  tools.py
buddy_agent/sub_agents/rag_retriever/: __init__.py  agent.py  better_search.py  fixed_search.py  lightweight_search.py  prompts.py  simple_vector_search.py  tools.py  ultra_safe_search.py  vector_search.py
deployment/: deploy.py
tests/: test_agents.py
